--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,14 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+	<listener>
+		<listener-class>com.spring.javaProjectS13.logoutListener.SessionListener</listener-class>
+	</listener>
+	
+	<listener>
+		<listener-class>com.spring.javaProjectS13.logoutListener.MyServletContextListener</listener-class>
+	</listener>
 
 	<!-- Processes application requests -->
 	<servlet>
